fix gap icon-text on other devices

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -184,13 +184,13 @@ body.index {
             div.item__header {
                display: flex;
                flex-direction: row;
-               gap: 1vw;
 
                img {
                   width: 3vw;
                }
 
                h1 {
+                  margin-left: 1vw;
                   margin-top: 1vw;
                   font-size: 1.5vw;
                   font-weight: 700;
@@ -260,9 +260,9 @@ body.index {
          display: flex;
          flex-direction: row;
          justify-content: center;
-         gap: 3vw;
 
          a {
+            margin-left: 3vw;
             font-size: 1.25vw;
             font-weight: 400;
             padding: 1vw 2.15vw;
@@ -387,7 +387,6 @@ body.index {
             display: flex;
             flex-direction: row;
             justify-content: center;
-            gap: 7vw;
             margin: 3vw auto 0;
             width: 80%;
 
@@ -401,6 +400,7 @@ body.index {
                      width: 5vw;
                   }
                   h1 {
+                     margin-left: 1vw;
                      font-size: 1.5vw;
                   }
                }
@@ -447,7 +447,7 @@ body.index {
 
          div.contacts__email {
             margin-top: 8vw;
-            gap: 4vw;
+            margin-bottom: 2vw;
 
             a {
                font-size: 2.2vw;
@@ -622,7 +622,7 @@ body.index {
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 3vw;
+            margin-bottom: 2vw;
 
             a {
                font-size: 4.5vw;
